[project]
name = "ComfyUI_StringTools"
description = "Some simple string tools to modify text and strings in ComfyUI."
version = "1.0.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/bradsec/ComfyUI_StringTools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "BRADSEC"
DisplayName = "ComfyUI_StringTools"
Icon = ""